--- a/src/modules/FeedContainer/Views/About/AcademicBackground/AcademicItem/_academic-item.scss
+++ b/src/modules/FeedContainer/Views/About/AcademicBackground/AcademicItem/_academic-item.scss
@@ -36,6 +36,7 @@
   .container_2 {
     width: 70%;
     padding: 0 9px;
+    gap: 4px;
     .ab-text_container {
       width: 100%;
       .ab-text_item {
